--- a/src/ui/Login.fxml
+++ b/src/ui/Login.fxml
@@ -11,8 +11,8 @@
    <children>
       <Pane prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
          <children>
-            <TextField layoutX="226.0" layoutY="149.0" />
-            <TextField layoutX="226.0" layoutY="213.0" />
+            <TextField fx:id="loginUsername" layoutX="226.0" layoutY="149.0" />
+            <TextField fx:id="loginPassword" layoutX="226.0" layoutY="213.0" />
             <Label layoutX="205.0" layoutY="27.0" text="Golden House">
                <font>
                   <Font name="Franklin Gothic Heavy" size="29.0" />
@@ -25,7 +25,7 @@
             </Label>
             <Label layoutX="226.0" layoutY="126.0" text="Nombre de usuario" />
             <Label layoutX="226.0" layoutY="192.0" text="Contraseña" />
-            <Button layoutX="258.0" layoutY="249.0" mnemonicParsing="false" text="Iniciar sesión" />
+            <Button layoutX="258.0" layoutY="249.0" mnemonicParsing="false" onAction="#login" text="Iniciar sesión" />
             <Button layoutX="230.0" layoutY="315.0" mnemonicParsing="false" onAction="#loadRegister" text="Crear una cuenta nueva" />
             <Label layoutX="232.0" layoutY="282.0" onMouseClicked="#loadRecover" text="¿Olvidaste tu contraseña?" />
          </children>
