--- a/src/ui/Register.fxml
+++ b/src/ui/Register.fxml
@@ -11,22 +11,26 @@
    <children>
       <Pane prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
          <children>
-            <TextField layoutX="226.0" layoutY="149.0" />
-            <TextField layoutX="226.0" layoutY="213.0" />
-            <Label layoutX="205.0" layoutY="27.0" text="Golden House">
+            <TextField fx:id="registerUsername" layoutX="226.0" layoutY="219.0" />
+            <TextField fx:id="registerPassword" layoutX="226.0" layoutY="269.0" />
+            <Label layoutX="205.0" layoutY="21.0" text="Golden House">
                <font>
                   <Font name="Franklin Gothic Heavy" size="29.0" />
                </font>
             </Label>
-            <Label layoutX="262.0" layoutY="73.0" text="Registrate">
+            <Label layoutX="262.0" layoutY="65.0" text="Registrate">
                <font>
                   <Font name="Franklin Gothic Heavy" size="15.0" />
                </font>
             </Label>
-            <Label layoutX="226.0" layoutY="126.0" text="Nombre de usuario" />
-            <Label layoutX="226.0" layoutY="192.0" text="Contraseña" />
-            <Button layoutX="258.0" layoutY="260.0" mnemonicParsing="false" text="Crear cuenta" />
-            <Button layoutX="258.0" layoutY="310.0" mnemonicParsing="false" onAction="#loadLogin" text="Iniciar sesión" />
+            <Label layoutX="226.0" layoutY="196.0" text="Nombre de usuario" />
+            <Label layoutX="228.0" layoutY="244.0" text="Contraseña" />
+            <Button layoutX="257.0" layoutY="311.0" mnemonicParsing="false" onAction="#register" text="Crear cuenta" />
+            <Button layoutX="258.0" layoutY="355.0" mnemonicParsing="false" onAction="#loadLogin" text="Iniciar sesión" />
+            <TextField fx:id="registerName" layoutX="225.0" layoutY="114.0" />
+            <Label layoutX="225.0" layoutY="91.0" text="Nombre" />
+            <TextField fx:id="registerLastName" layoutX="226.0" layoutY="164.0" />
+            <Label layoutX="225.0" layoutY="147.0" text="Apellido" />
          </children>
       </Pane>
    </children>
