--- a/bin/ui/Login.fxml
+++ b/bin/ui/Login.fxml
@@ -9,25 +9,26 @@
 
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Pane prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+      <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #000000;" VBox.vgrow="ALWAYS">
          <children>
             <TextField fx:id="loginUsername" layoutX="226.0" layoutY="149.0" />
             <TextField fx:id="loginPassword" layoutX="226.0" layoutY="213.0" />
-            <Label layoutX="205.0" layoutY="27.0" text="Golden House">
+            <Label layoutX="205.0" layoutY="27.0" text="Golden House" textFill="#e4d290">
                <font>
                   <Font name="Franklin Gothic Heavy" size="29.0" />
                </font>
             </Label>
-            <Label layoutX="254.0" layoutY="74.0" text="Inicia Sesión">
+            <Label layoutX="254.0" layoutY="74.0" text="Inicia Sesión" textFill="#e4d290">
                <font>
                   <Font name="Franklin Gothic Heavy" size="15.0" />
                </font>
             </Label>
-            <Label layoutX="226.0" layoutY="126.0" text="Nombre de usuario" />
-            <Label layoutX="226.0" layoutY="192.0" text="Contraseña" />
+            <Label layoutX="226.0" layoutY="126.0" text="Nombre de usuario" textFill="#e4d290" />
+            <Label layoutX="226.0" layoutY="192.0" text="Contraseña" textFill="#e4d290" />
             <Button layoutX="258.0" layoutY="249.0" mnemonicParsing="false" onAction="#login" text="Iniciar sesión" />
             <Button layoutX="230.0" layoutY="315.0" mnemonicParsing="false" onAction="#loadRegister" text="Crear una cuenta nueva" />
-            <Label layoutX="232.0" layoutY="282.0" onMouseClicked="#loadRecover" text="¿Olvidaste tu contraseña?" />
+            <Label layoutX="232.0" layoutY="282.0" onMouseClicked="#loadRecover" style="-fx-cursor: hand;" text="¿Olvidaste tu contraseña?" textFill="#e4d290" underline="true" />
+            <Label fx:id="warningLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="225.0" layoutY="101.0" prefHeight="17.0" prefWidth="149.0" textAlignment="CENTER" textFill="RED" />
          </children>
       </Pane>
    </children>
