--- a/bin/ui/Recover.fxml
+++ b/bin/ui/Recover.fxml
@@ -9,25 +9,25 @@
 
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Pane prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+      <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #000000;" VBox.vgrow="ALWAYS">
          <children>
             <TextField layoutX="225.0" layoutY="129.0" />
             <TextField layoutX="225.0" layoutY="188.0" />
-            <Label layoutX="205.0" layoutY="27.0" text="Golden House">
+            <Label layoutX="205.0" layoutY="27.0" text="Golden House" textFill="#e4d290">
                <font>
                   <Font name="Franklin Gothic Heavy" size="29.0" />
                </font>
             </Label>
-            <Label layoutX="218.0" layoutY="72.0" text="Cambiar de contraseña">
+            <Label layoutX="218.0" layoutY="72.0" text="Cambiar de contraseña" textFill="#e4d290">
                <font>
                   <Font name="Franklin Gothic Heavy" size="15.0" />
                </font>
             </Label>
-            <Label layoutX="223.0" layoutY="112.0" text="Ingresa el nombre de usuario" />
-            <Label layoutX="225.0" layoutY="169.0" text="Ingresa la nueva contraseña" />
+            <Label layoutX="223.0" layoutY="112.0" text="Ingresa el nombre de usuario" textFill="#e4d290" />
+            <Label layoutX="225.0" layoutY="169.0" text="Ingresa la nueva contraseña" textFill="#e4d290" />
             <Button layoutX="298.0" layoutY="294.0" mnemonicParsing="false" text="Cambiar contraseña" />
             <Button layoutX="225.0" layoutY="294.0" mnemonicParsing="false" onAction="#loadLogin" text="Cancelar" />
-            <Label layoutX="225.0" layoutY="227.0" text="Repite la contraseña" />
+            <Label layoutX="225.0" layoutY="227.0" text="Repite la contraseña" textFill="#e4d290" />
             <TextField layoutX="224.0" layoutY="250.0" />
          </children>
       </Pane>
