--- a/src/ui/Register.fxml
+++ b/src/ui/Register.fxml
@@ -9,28 +9,29 @@
 
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Pane prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+      <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #000000;" VBox.vgrow="ALWAYS">
          <children>
             <TextField fx:id="registerUsername" layoutX="226.0" layoutY="219.0" />
             <TextField fx:id="registerPassword" layoutX="226.0" layoutY="269.0" />
-            <Label layoutX="205.0" layoutY="21.0" text="Golden House">
+            <Label layoutX="205.0" layoutY="21.0" text="Golden House" textFill="#e4d290">
                <font>
                   <Font name="Franklin Gothic Heavy" size="29.0" />
                </font>
             </Label>
-            <Label layoutX="262.0" layoutY="65.0" text="Registrate">
+            <Label layoutX="262.0" layoutY="65.0" text="Registrate" textFill="#e4d290">
                <font>
                   <Font name="Franklin Gothic Heavy" size="15.0" />
                </font>
             </Label>
-            <Label layoutX="226.0" layoutY="196.0" text="Nombre de usuario" />
-            <Label layoutX="228.0" layoutY="244.0" text="Contraseña" />
-            <Button layoutX="257.0" layoutY="311.0" mnemonicParsing="false" onAction="#register" text="Crear cuenta" />
-            <Button layoutX="258.0" layoutY="355.0" mnemonicParsing="false" onAction="#loadLogin" text="Iniciar sesión" />
+            <Label layoutX="226.0" layoutY="196.0" text="Nombre de usuario" textFill="#e4d290" />
+            <Label layoutX="228.0" layoutY="244.0" text="Contraseña" textFill="#e4d290" />
+            <Button layoutX="255.0" layoutY="323.0" mnemonicParsing="false" onAction="#register" text="Crear cuenta" />
+            <Button layoutX="254.0" layoutY="361.0" mnemonicParsing="false" onAction="#loadLogin" text="Iniciar sesión" />
             <TextField fx:id="registerName" layoutX="225.0" layoutY="114.0" />
-            <Label layoutX="225.0" layoutY="91.0" text="Nombre" />
+            <Label layoutX="225.0" layoutY="91.0" text="Nombre" textFill="#e4d290" />
             <TextField fx:id="registerLastName" layoutX="226.0" layoutY="164.0" />
-            <Label layoutX="225.0" layoutY="147.0" text="Apellido" />
+            <Label layoutX="225.0" layoutY="147.0" text="Apellido" textFill="#e4d290" />
+            <Label fx:id="warningLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="229.0" layoutY="306.0" prefHeight="17.0" prefWidth="141.0" textFill="RED" />
          </children>
       </Pane>
    </children>
