--- a/bin/ui/GH.fxml
+++ b/bin/ui/GH.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
@@ -7,9 +8,19 @@
 
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Pane prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+      <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #000000;" VBox.vgrow="ALWAYS">
          <children>
-            <Label layoutX="14.0" layoutY="14.0" text="Golden House">
+            <VBox alignment="CENTER" prefHeight="400.0" prefWidth="176.0" spacing="25.0" style="-fx-border-color: #e4d290;">
+               <children>
+                  <Button alignment="CENTER" mnemonicParsing="false" text="Hacer pedido" />
+                  <Button mnemonicParsing="false" onAction="#loadIngredient" text="Agregar Ingredientes" />
+                  <Button mnemonicParsing="false" text="Agregar tipos de productos" />
+                  <Button mnemonicParsing="false" text="Editar productos" />
+                  <Button mnemonicParsing="false" text="Remover objeto" />
+                  <Button mnemonicParsing="false" text="Agregar clientes" />
+               </children>
+            </VBox>
+            <Label layoutX="187.0" layoutY="14.0" text="Golden House" textFill="#e4d290">
                <font>
                   <Font name="Franklin Gothic Heavy" size="29.0" />
                </font>
