--- a/bin/ui/GH.fxml
+++ b/bin/ui/GH.fxml
@@ -1,31 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #000000;" VBox.vgrow="ALWAYS">
+      <VBox alignment="CENTER_LEFT" prefHeight="400.0" prefWidth="176.0" spacing="25.0" style="-fx-border-color: #e4d290; -fx-background-color: #000000;">
          <children>
-            <VBox alignment="CENTER" prefHeight="400.0" prefWidth="176.0" spacing="25.0" style="-fx-border-color: #e4d290;">
-               <children>
-                  <Button alignment="CENTER" mnemonicParsing="false" text="Hacer pedido" />
-                  <Button mnemonicParsing="false" onAction="#loadIngredient" text="Agregar Ingredientes" />
-                  <Button mnemonicParsing="false" text="Agregar tipos de productos" />
-                  <Button mnemonicParsing="false" text="Editar productos" />
-                  <Button mnemonicParsing="false" text="Remover objeto" />
-                  <Button mnemonicParsing="false" text="Agregar clientes" />
-               </children>
-            </VBox>
-            <Label layoutX="187.0" layoutY="14.0" text="Golden House" textFill="#e4d290">
+            <Label text="Menu" textFill="#e4d290">
                <font>
                   <Font name="Franklin Gothic Heavy" size="29.0" />
                </font>
             </Label>
+            <Button alignment="CENTER" mnemonicParsing="false" text="Hacer pedido" />
+            <Button mnemonicParsing="false" onAction="#loadIngredient" text="Agregar Ingredientes" />
+            <Button mnemonicParsing="false" text="Agregar tipos de productos" />
+            <Button mnemonicParsing="false" text="Editar productos" />
+            <Button mnemonicParsing="false" text="Remover objeto" />
+            <Button mnemonicParsing="false" text="Agregar clientes" />
          </children>
-      </Pane>
+         <padding>
+            <Insets left="5.0" />
+         </padding>
+      </VBox>
+      <VBox prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
+         <children>
+            <Pane prefHeight="42.0" prefWidth="424.0" style="-fx-background-color: #000000;" VBox.vgrow="ALWAYS">
+               <children>
+                  <Label text="Golden House" textFill="#e4d290">
+                     <font>
+                        <Font name="Franklin Gothic Heavy" size="29.0" />
+                     </font>
+                     <padding>
+                        <Insets left="5.0" />
+                     </padding>
+                  </Label>
+               </children>
+               <padding>
+                  <Insets left="5.0" />
+               </padding>
+            </Pane>
+            <StackPane fx:id="ghPane" alignment="TOP_LEFT" prefHeight="339.0" prefWidth="424.0" style="-fx-background-color: #000000;" VBox.vgrow="ALWAYS" />
+         </children>
+         <HBox.margin>
+            <Insets />
+         </HBox.margin>
+      </VBox>
    </children>
-</VBox>
+</HBox>
