--- a/bin/ui/Add.fxml
+++ b/bin/ui/Add.fxml
@@ -2,12 +2,18 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-
-<VBox alignment="CENTER_LEFT" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="265.0" prefWidth="167.0" spacing="25.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="CENTER_LEFT" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="305.0" prefWidth="167.0" spacing="25.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button mnemonicParsing="false" text="Agregar producto" />
+      <Label prefWidth="76.0" text="Menu" textFill="#e4d290">
+         <font>
+            <Font name="Franklin Gothic Heavy" size="29.0" />
+         </font>
+      </Label>
+      <Button mnemonicParsing="false" onAction="#loadProduct" text="Agregar producto" />
       <Button mnemonicParsing="false" text="Agregar cliente" />
       <Button mnemonicParsing="false" onAction="#loadIngredient" text="Agregar ingrediente" />
       <Button mnemonicParsing="false" onAction="#loadType" text="Agregar tipo de producto" />
