Added the possibility to fully edit the Client (attributes different from the id) and the ingredients

--- a/src/ui/EditClient.fxml
+++ b/src/ui/EditClient.fxml
@@ -28,6 +28,6 @@
          </children>
       </HBox>
       <ListView fx:id="clientList" prefHeight="200.0" prefWidth="200.0" />
-      <Button mnemonicParsing="false" onAction="#editProduct" text="Editar" />
+      <Button mnemonicParsing="false" onAction="#editClient" text="Editar" />
    </children>
 </VBox>
