--- a/src/ui/EditIngredient.fxml
+++ b/src/ui/EditIngredient.fxml
@@ -28,6 +28,6 @@
          </children>
       </HBox>
       <ListView fx:id="ingredientList" prefHeight="200.0" prefWidth="200.0" />
-      <Button mnemonicParsing="false" onAction="#editProduct" text="Editar" />
+      <Button mnemonicParsing="false" onAction="#editIngredient" text="Editar" />
    </children>
 </VBox>
