--- a/src/ui/DeleteProduct.fxml
+++ b/src/ui/DeleteProduct.fxml
@@ -10,7 +10,7 @@
 
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="372.0" prefWidth="269.0" spacing="15.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label text="Elige un tipo de producto" textFill="#e4d290">
+      <Label text="Elige el producto a eliminar" textFill="#e4d290">
          <font>
             <Font name="Franklin Gothic Heavy" size="18.0" />
          </font>
@@ -20,14 +20,14 @@
       </Label>
       <HBox alignment="CENTER" prefHeight="31.0" prefWidth="214.0">
          <children>
-            <Label text="Type" textFill="#e4d290">
+            <Label text="Product" textFill="#e4d290">
                <HBox.margin>
                   <Insets right="5.0" />
                </HBox.margin>
             </Label>
          </children>
       </HBox>
-      <ListView fx:id="typeList" prefHeight="200.0" prefWidth="200.0" />
-      <Button mnemonicParsing="false" onAction="#editType" text="Editar" />
+      <ListView fx:id="deleteProductList" prefHeight="200.0" prefWidth="200.0" />
+      <Button mnemonicParsing="false" onAction="#finishProductDelete" text="Editar" />
    </children>
 </VBox>
