Enable/Disable functional. Deleting an object functional (Just for the products and ingredients, as I haven't validated the clients and employees in the orders). 5 things needed, List each object, Generating reports, adding the order functionality, implementing the course stuff, sorts, binary search, comparable and comparator, etc. And, finally, fixing, if there is something to fix, in the inheritance part.

--- a/src/ui/EnableDisable.fxml
+++ b/src/ui/EnableDisable.fxml
@@ -14,10 +14,10 @@
          </font>
       </Label>
       <Button fx:id="productBtn" mnemonicParsing="false" onAction="#loadEnableDisable" text="Hab/Des Producto" />
-      <Button fx:id="employeeBtn" mnemonicParsing="false" onAction="#loadEnableDisable" text="Hab/Des empleado" />
+      <Button fx:id="employeeBtn" mnemonicParsing="false" onAction="#loadEnableDisable" text="Hab/Des Empleado" />
       <Button fx:id="clientBtn" mnemonicParsing="false" onAction="#loadEnableDisable" text="Hab/Des Cliente" />
-      <Button fx:id="ingredientsBtn" mnemonicParsing="false" onAction="#loadEnableDisable" text="Hab/Des ingredientes" />
-      <Button fx:id="typesBtn" mnemonicParsing="false" onAction="#loadEnableDisable" text="Hab/Des tipos" />
+      <Button fx:id="ingredientsBtn" mnemonicParsing="false" onAction="#loadEnableDisable" text="Hab/Des Ingredientes" />
+      <Button fx:id="typesBtn" mnemonicParsing="false" onAction="#loadEnableDisable" text="Hab/Des Tipos" />
       <Button mnemonicParsing="false" onAction="#loadMenu" text="Regresar" />
    </children>
    <padding>
