Report menu added / Bubble sort for ingredients and insertion sort for types added

--- a/bin/ui/GH.fxml
+++ b/bin/ui/GH.fxml
@@ -27,7 +27,7 @@
             <Button fx:id="listSub" mnemonicParsing="false" onAction="#loadSubMenu" text="Listar" />
             <Button fx:id="enableDisable" mnemonicParsing="false" onAction="#loadSubMenu" text="Habilitar/Deshabilitar" />
             <Button fx:id="deleteSub" mnemonicParsing="false" onAction="#loadSubMenu" text="Eliminar" />
-            <Button mnemonicParsing="false" text="Generar reportes" />
+            <Button fx:id="reportSub" mnemonicParsing="false" onAction="#loadSubMenu" text="Generar reportes" />
          </children>
          <padding>
             <Insets left="5.0" />
