Readme added // Edit client and employee issue fixed. There are two files that I don't know how they got generated, but they got important info

--- a/src/ui/IngredientList.fxml
+++ b/src/ui/IngredientList.fxml
@@ -17,7 +17,7 @@
             <Insets bottom="15.0" />
          </VBox.margin>
       </Label>
-      <TableView fx:id="ingredientTable" onMouseClicked="#handleClick" prefHeight="200.0" prefWidth="200.0">
+      <TableView fx:id="ingredientTable" prefHeight="200.0" prefWidth="200.0">
          <columns>
             <TableColumn fx:id="ingredientNameColumn" prefWidth="95.0" text="Name" />
             <TableColumn fx:id="ingredientCreatedByColumn" prefWidth="153.0" text="Creado por" />
