--- a/src/ui/EditOneClient.fxml
+++ b/src/ui/EditOneClient.fxml
@@ -72,6 +72,6 @@
             <TextArea fx:id="editClientObservations" prefHeight="114.0" prefWidth="224.0" />
          </children>
       </VBox>
-      <Button mnemonicParsing="false" onAction="#finishClientEdit" text="Añadir" />
+      <Button mnemonicParsing="false" onAction="#finishClientEdit" text="Editar" />
    </children>
 </VBox>
