--- a/bin/ui/Login.fxml
+++ b/bin/ui/Login.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -18,17 +20,23 @@
                   <Font name="Franklin Gothic Heavy" size="29.0" />
                </font>
             </Label>
-            <Label layoutX="254.0" layoutY="74.0" text="Inicia Sesión" textFill="#e4d290">
+            <Label fx:id="loginLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="211.0" layoutY="74.0" prefHeight="18.0" prefWidth="178.0" text="Inicia Sesión" textFill="#e4d290">
                <font>
                   <Font name="Franklin Gothic Heavy" size="15.0" />
                </font>
             </Label>
-            <Label layoutX="226.0" layoutY="126.0" text="Nombre de usuario" textFill="#e4d290" />
-            <Label layoutX="226.0" layoutY="192.0" text="Contraseña" textFill="#e4d290" />
-            <Button layoutX="258.0" layoutY="249.0" mnemonicParsing="false" onAction="#login" text="Iniciar sesión" />
-            <Button layoutX="230.0" layoutY="315.0" mnemonicParsing="false" onAction="#loadRegister" text="Crear una cuenta nueva" />
-            <Label layoutX="232.0" layoutY="282.0" onMouseClicked="#loadRecover" style="-fx-cursor: hand;" text="¿Olvidaste tu contraseña?" textFill="#e4d290" underline="true" />
+            <Label fx:id="usernameLabel" layoutX="226.0" layoutY="126.0" text="Nombre de usuario" textFill="#e4d290" />
+            <Label fx:id="passwordLabel" layoutX="226.0" layoutY="192.0" text="Contraseña" textFill="#e4d290" />
+            <Button fx:id="createBtn" alignment="CENTER" layoutX="230.0" layoutY="315.0" mnemonicParsing="false" onAction="#loadRegister" text="Crear una cuenta nueva" />
+            <Label fx:id="forgotLabel" alignment="CENTER" layoutX="214.0" layoutY="282.0" onMouseClicked="#loadRecover" prefHeight="17.0" prefWidth="178.0" style="-fx-cursor: hand;" text="¿Olvidaste tu contraseña?" textFill="#e4d290" underline="true" />
             <Label fx:id="warningLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="225.0" layoutY="101.0" prefHeight="17.0" prefWidth="149.0" textAlignment="CENTER" textFill="RED" />
+            <HBox alignment="CENTER" layoutX="225.0" layoutY="248.0" prefHeight="34.0" prefWidth="149.0">
+               <children>
+                  <Button fx:id="loginBtn" mnemonicParsing="false" onAction="#login" text="Iniciar sesión" />
+               </children>
+            </HBox>
+            <ComboBox fx:id="languageBox" layoutX="428.0" layoutY="32.0" prefWidth="150.0" />
+            <Button layoutX="517.0" layoutY="71.0" mnemonicParsing="false" onAction="#changeLanguage" text="Cambiar" />
          </children>
       </Pane>
    </children>
