--- a/bin/ui/Recover.fxml
+++ b/bin/ui/Recover.fxml
@@ -18,16 +18,16 @@
                   <Font name="Franklin Gothic Heavy" size="29.0" />
                </font>
             </Label>
-            <Label layoutX="218.0" layoutY="72.0" text="Cambiar de contraseña" textFill="#e4d290">
+            <Label fx:id="changeLabel" layoutX="218.0" layoutY="72.0" text="Cambiar de contraseña" textFill="#e4d290">
                <font>
                   <Font name="Franklin Gothic Heavy" size="15.0" />
                </font>
             </Label>
-            <Label layoutX="223.0" layoutY="112.0" text="Ingresa el nombre de usuario" textFill="#e4d290" />
-            <Label layoutX="225.0" layoutY="169.0" text="Ingresa la nueva contraseña" textFill="#e4d290" />
-            <Button layoutX="298.0" layoutY="294.0" mnemonicParsing="false" onAction="#recover" text="Cambiar contraseña" />
-            <Button layoutX="225.0" layoutY="294.0" mnemonicParsing="false" onAction="#loadLogin" text="Cancelar" />
-            <Label layoutX="225.0" layoutY="227.0" text="Repite la contraseña" textFill="#e4d290" />
+            <Label fx:id="usernameLabel" layoutX="223.0" layoutY="112.0" text="Ingresa el nombre de usuario" textFill="#e4d290" />
+            <Label fx:id="passwordLabel" layoutX="225.0" layoutY="169.0" text="Ingresa la nueva contraseña" textFill="#e4d290" />
+            <Button fx:id="changeBtn" layoutX="298.0" layoutY="294.0" mnemonicParsing="false" onAction="#recover" text="Cambiar contraseña" />
+            <Button fx:id="cancelBtn" layoutX="225.0" layoutY="294.0" mnemonicParsing="false" onAction="#loadLogin" text="Cancelar" />
+            <Label fx:id="repeatLabel" layoutX="225.0" layoutY="227.0" text="Repite la contraseña" textFill="#e4d290" />
             <TextField fx:id="repeatPassword" layoutX="224.0" layoutY="250.0" />
             <Label fx:id="warningLabel" alignment="CENTER" layoutX="223.0" layoutY="95.0" prefHeight="17.0" prefWidth="155.0" textAlignment="CENTER" textFill="RED" />
          </children>
